<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infoInicial.view.InformacionInicialActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/acComicViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/obaRlt"
        app:layout_constraintEnd_toEndOf="parent  "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.viewpager.widget.ViewPager>

    <RelativeLayout
        android:id="@+id/obaRlt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="Comenzar"
            android:textAllCaps="false" />

        <LinearLayout
            android:id="@+id/obaLltDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/btnChangeSlide1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_baseline_navigate_before_24"
            android:paddingBottom="30dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnChangeSlide"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_baseline_navigate_next_24"
            android:paddingBottom="30dp"
            android:visibility="visible" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>